prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_complex_assign_mismatch.nut
// EXPECTED: compile-time error
// Variable with type annotation reassigned with wrong type expression
local x: int = 42
x = "hello"
return x
